# raceformer

./: .ruff.toml  README.md  main.py  pyproject.toml
.github/workflows/: lint.yml
configs/: pretrain_cmht.toml  rl_racecar.toml
data/drive_dusk_clear_0/drive_dusk_1/Gps_Imu/data/: 00000000.txt  00000001.txt  00000002.txt  00000003.txt  00000004.txt  00000005.txt  00000006.txt  00000007.txt  00000008.txt  00000009.txt  00000011.txt  00000012.txt  00000013.txt  00000014.txt  00000015.txt  00000016.txt  00000017.txt  00000018.txt  00000019.txt  00000020.txt  00000021.txt  00000022.txt  00000023.txt  00000024.txt  00000025.txt  00000026.txt  00000027.txt  00000028.txt  00000029.txt  00000030.txt  00000031.txt  00000032.txt  00000033.txt  00000034.txt  00000035.txt  00000036.txt  00000037.txt  00000038.txt  00000039.txt  00000040.txt  (+4793 more)
data/drive_dusk_clear_0/drive_dusk_1/calib/camera/: front (copy).json
data/drive_dusk_clear_0/drive_dusk_1/calib/radar/: front_points.json
data/drive_dusk_clear_0/drive_dusk_1/label/: 00000090.json  00000091.json  00000092.json  00000093.json  00000094.json  00000095.json  00000096.json  00000097.json  00000098.json  00000099.json  00000100.json  00000101.json  00000102.json  00000103.json  00000104.json  00000105.json  00000106.json  00000107.json  00000108.json  00000109.json  00000110.json  00000111.json  00000112.json  00000113.json  00000114.json  00000115.json  00000116.json  00000117.json  00000118.json  00000119.json  00000120.json  00000121.json  00000122.json  00000123.json  00000124.json  00000125.json  00000126.json  00000127.json  00000128.json  00000129.json  (+3128 more)
paper/: citations.bib
src/: __init__.py
src/data/: __init__.py  cmht_loader.py  gym_wrapper.py
src/models/: __init__.py  encoders.py  fusion.py  heads.py
src/training/: __init__.py  pretrainer.py  rl_agent.py
tests/: smoke_test.py
