[project]
name = "raceformer"
version = "0.1.0"
description = "Pretraining multimodal transformers for autonomous racing RL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dm-tree",
    "flax",
    "grain",
    "gym",
    "jax==0.8.1",
    "jaxlib",
    "numpy",
    "optax",
    "orbax-checkpoint",
    "pybullet",
    "racecar-gym @ git+https://github.com/RajeevAtla/racecar_gym.git",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
